--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "chart.js": "^4.5.1",
+    "ng2-charts": "^8.0.0",
     "primeflex": "^4.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
